# test-diplom

App/: git-memo.txt  pyproject.toml
App/src/app/Alembic-test/: alembic.ini  models.py
App/src/app/Alembic-test/alembicenv/versions/: fd278aaf3e3e_.py
App/src/app/FastAPI-Alembic-test/: memo.txt
App/src/app/FastAPI-Alembic-test/alembicenv/versions/: 2fa592a307b8_create_user_table.py  76c50638b01c_add_role_column.py
App/src/app/NodeJS-ForDumbAF/: for-start.txt  package-lock.json  package.json  server.js
App/src/app/NodeJS-ForDumbAF/.ssh/: id_rsa.pub
App/src/app/NodeJS-ForDumbAF/WebSocket-test/: front.html
App/src/app/Redis-test/: redis.py
App/src/app/WebSocket-test/: back.js  package-lock.json  package.json  server.js
App/src/app/test-app/: main.py  models.py  tasks.py
