[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "goshmak",email = "gosh.maksimov2017@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.7,<0.129.0)",
    "redis (>=7.1.1,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "importlib-metadata (==4.12.0)",
    "pywebpush (>=2.3.0,<3.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
